--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -66,8 +66,9 @@ window#waybar {
     margin-top:2px;
 }
 
-#workspaces button.focused {
-    border-color: #81a1c1;
+#workspaces button.active {
+    box-shadow: inset 0 -4px #a6e3a1;
+    background-color: #000000;
 }
 
 #mode {
